<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tile_map_server</name>
  <version>0.1.0</version>
  <description>
    Sliding-window tiled map server for large-area navigation.
    Loads occupancy grid tiles around the robot and republishes a stitched
    map for AMCL and the Nav2 global costmap.
  </description>
  <maintainer email="dandelion1124@gmail.com">jazzy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>nav2_util</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
